Mudanças na documentação
Mudança em alguns textos.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
         <div class="sobre-col-2">
           <h1 class="sub-title">Sobre Mim</h1>
-          <p>Sou o Caio, tenho 21 anaos, atualmente estou cursando Sistemas de informação na FIAP. 
-            Tenho  muita vontade de aprender e Desenvolever minhas habilidades. Tenho estudado desevolvendo projetos tanto
-          Back-end quanto Front-end, e tenho uma muito interrese em aplicativos mobile também.</p>
+          <p>Sou o Caio, tenho 21 anos, atualmente estou cursando Sistemas de informação na FIAP. 
+            Tenho  muita vontade de aprender e Desenvolver minhas habilidades. Tenho estudado desevolvendo projetos tanto
+          Back-end quanto Front-end, e tenho muito interesse em aplicativos mobile também.</p>
 
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('Habilidades')">Habilidades</p>
