Alteração de menu
Alteração do menu voltar inicio.

--- a/index.html
+++ b/index.html
@@ -145,13 +145,19 @@
                 <a href="https://github.com/CaioFavaro" target="_blank"><i class="fa-brands fa-github"></i></a>
               </div>
               <a href="images/meu curriculo.pdf" download class="btn btn2">Baixe meu CV</a>
+
+              <div class="voltar">
+                <a href="#header"> <p>Voltar para o inicio </p> </a>
+              </div>
             </div>
+            
             <div class="contato-right">
               <form action="https://api.staticforms.xyz/submit" method="post">
                 <input type="text" name="Name" placeholder="Digite seu nome" required autocomplete="off">
                 <input type="email" name="Email" placeholder="Digite seu email" required autocomplete="off">
                 <textarea name="Message" rows="6" placeholder="Digite sua mensagem"></textarea>
                 <button type="submit" class="btn btn2">Enviar</button>
+                
 
                 <input type="hidden" name="accessKey" value="6cd30a0d-3d20-40ef-b53f-82bee0f70aa9">
                 <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/index.html">
