--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="images/user1.png">
               <div class="layer">
                   <h3>Tela de login</h3>
-                  <p>Tele de login inicial, com uma animação de um avião.</p><br>
+                  <p>Tele de login inicial, com uma animação de um avião. Realizado com HTML e CSS.</p><br>
                   <a href="Login/login.html " target="_blank"><i class="fas fa-external-link-alt"></i></a>
               </div>
             </div>
@@ -114,7 +114,7 @@
               <img src="images/locadora1.jpg">
               <div class="layer">
                 <h3>Locadora de Filmes</h3>
-                <p>Sistema de locação de filmes.</p><br>
+                <p>Sistema de locação de filmes. Com exclusão e adição de filme. Projeto desenvolvido em Java com o Front-end utlizando HTML, CSS e Bootstrap.</p><br>
                 <a href="LocadoraMVC-main/locadora-mvc/src/main/resources/templates/home.html" target="_blank"><i class="fas fa-external-link-alt"></i></a>
             </div>
             </div>
@@ -122,8 +122,8 @@
               <img src="images/dinherio1.png">
               <div class="layer">
                 <h3>Aplicativo de finanças</h3>
-                <p>Aplicativo ainda em produção.</p><br>
-                <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                <p>ainda em Desenvolvimento.</p><br>
+                <i class="fa-solid fa-lock"></i>
             </div>
             </div>
           </div>
