--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="sobre-col-2">
           <h1 class="sub-title">Sobre Mim</h1>
           <p>Sou o Caio, tenho 21 anos, atualmente estou cursando Sistemas de informação na FIAP. 
-            Tenho  muita vontade de aprender e Desenvolver minhas habilidades. Tenho estudado desevolvendo projetos tanto
-          Back-end quanto Front-end, e tenho muito interesse em aplicativos mobile também.</p>
+            Tenho  muita vontade de aprender e Desenvolver minhas habilidades. Tenho estudado desenvolvendo projetos tanto
+          Back-end quanto Front-end e tenho muito interesse em aplicações mobile .</p>
 
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('Habilidades')">Habilidades</p>
@@ -144,7 +144,7 @@
                 <a href="https://www.linkedin.com/in/caiofavaro/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/CaioFavaro" target="_blank"><i class="fa-brands fa-github"></i></a>
               </div>
-              <a href="images/meu curriculo.pdf" download class="btn btn2">Baixe meu CV</a>
+              <a href="images/Caio_Favaro-CV.pdf" download class="btn btn2">Baixe meu CV</a>
 
               <div class="voltar">
                 <a href="#header"> <p>Voltar para o inicio </p> </a>
